src/test/ui/consts/const-eval/ub-incorrect-vtable.stderr
error: any use of this value will cause an error
  --> $DIR/ub-incorrect-vtable.rs:10:14
   |
LL | / const INVALID_VTABLE_ALIGNMENT: &dyn Trait =
LL | |     unsafe { std::mem::transmute((&92u8, &[0usize, 1usize, 1000usize])) };
   | |______________^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^__-
   |                |
   |                invalid vtable: alignment `1000` is not a power of 2
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: any use of this value will cause an error
  --> $DIR/ub-incorrect-vtable.rs:16:14
   |
LL | / const INVALID_VTABLE_SIZE: &dyn Trait =
LL | |     unsafe { std::mem::transmute((&92u8, &[1usize, usize::MAX, 1usize])) };
   | |______________^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^__-
   |                |
   |                invalid vtable: size is bigger than largest supported object
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to 2 previous errors

